<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">module_wom_producetask</string>
    <string name="wom_all">全部</string>
    <string name="wom_wait_executed">待执行</string>
    <string name="wom_executing">执行中</string>
    <string name="wom_paused">已暂停</string>
    <string name="wom_stopped">已停止</string>
    <string name="wom_abandoned">已放弃</string>
    <string name="wom_product">产品</string>
    <string name="wom_execute_system">执行系统</string>
    <string name="wom_production_line">生产线</string>
    <string name="wom_formula">配方</string>
    <string name="wom_time">时间</string>
    <string name="wom_num">数量</string>
    <string name="wom_start">开启</string>
    <string name="wom_pause">暂停</string>
    <string name="wom_resume">恢复</string>
    <string name="wom_stop">停止</string>
    <string name="wom_title_tip">提  示</string>
    <string name="wom_confirm">确定</string>
    <string name="wom_cancel">取消</string>
    <string name="wom_process_name">工序</string>
    <string name="wom_equipment_name">工作单元</string>
    <string name="wom_process_sequence">工序顺序</string>
    <string name="wom_end">结束</string>
    <string name="wom_setting">设  置</string>
    <string name="wom_common_produce_task">标准工单</string>
    <string name="wom_simple_produce_task">普通工单</string>
    <string name="wom_produce_task_end_report">指令单完工报工</string>
    <string name="wom_produce_name">产品名称</string>
    <string name="wom_produce_code">产品编码</string>
    <string name="wom_plan_num">计划数量</string>
    <string name="wom_produce_task_report_detail">报工明细</string>
    <string name="wom_submit">提 交</string>
    <string name="wom_into_warehouse_batch_num">入库批号</string>
    <string name="wom_warehouse">仓库</string>
    <string name="wom_storeset">货位</string>
    <string name="wom_delete">删除</string>
    <string name="wom_formula_activity">配方活动</string>
    <string name="wom_temporary_activity">机动活动</string>
    <string name="wom_activity_list">活动列表</string>
    <string name="wom_routine">常规</string>
    <string name="wom_sequence">顺序</string>
    <string name="wom_check">检查</string>
    <string name="wom_item_check">检查项</string>
    <string name="wom_item_standard">标准值</string>
    <string name="wom_item_report_val">报出值</string>
    <string name="wom_is_pass">是否通过</string>
    <string name="wom_manual_put_in">人工投料</string>
    <string name="wom_manual_put_in_report">人工投料报工</string>
    <string name="wom_agile_put_in_report">灵活人工投料报工</string>
    <string name="wom_material_name">物料名称</string>
    <string name="wom_material_code">物料编码</string>
    <string name="wom_material_batch_num">物料批号</string>
    <string name="wom_put_in_num">用料量</string>
    <string name="wom_manual_batch_put_in_report">人工投配料报工</string>
    <string name="wom_batch_material_records_ref">配料参照</string>
    <string name="wom_batch_material_number">配料数量</string>
    <string name="wom_batch_mode">配料模式+配于</string>
    <string name="wom_no_data_operate">无数据可操作</string>
    <string name="wom_dealing">处理中…</string>
    <string name="wom_dealt_success">处理成功</string>
    <string name="wom_input_material_code">请输入物料编码</string>
    <string name="wom_select_material">请选择物料</string>
    <string name="wom_material">物料</string>
    <string name="wom_output_num">产出量</string>
    <string name="wom_manual_output_report">人工产出报工</string>
    <string name="wom_manual_agile_output_report">灵活人工产出报工</string>
    <string name="wom_first_start_activity">请先开始活动</string>
    <string name="wom_batch_material_management">配料管理</string>
    <string name="wom_produce_task">生产指令单</string>
    <string name="wom_input_produce_batch_num">请输入生产批号</string>
    <string name="wom_produce_batch_num">生产批号</string>
    <string name="wom_plan">计划</string>
    <string name="wom_sum">已投</string>
    <string name="wom_output">已产出</string>
    <string name="wom_remainder">剩余</string>
    <string name="wom_null_list">原因列表为空，请尝试重启应用</string>
    <string name="wom_null_systemcode"><![CDATA[原因列表为空，请进入主页数据管理-->系统编码下载]]></string>
    <string name="wom_report">报工</string>
    <string name="wom_putin_num_compare">用料量禁止大于可用量:</string>
    <string name="wom_receive_reason_all">接收</string>
    <string name="wom_receive_reason_part">部分接收</string>
    <string name="wom_receive_reason_none">拒收</string>
    <string name="wom_checking">检验中</string>
    <string name="wom_scan_material_error">扫描物料不匹配，请核对！</string>
    <string name="wom_scan_batchNo_error">扫描物料批号不匹配，请核对！</string>
    <string name="wom_discharge">提前放料</string>
    <string name="taskState">执行状态</string>
    <string name="wom_advance_release">提前放行</string>
    <string name="wom_adjust">调整</string>
    <string name="wom_adjust_activity">调整活动</string>
    <string name="wom_quality_sum">检验次数</string>
    <string name="wom_start_quality">发起请检</string>
    <string name="wom_activity_exe_records">活动执行记录</string>
    <string name="wom_start_quality_operate">确认发起请检操作？</string>
    <string name="wom_start_activity_operate">确认开始活动操作？</string>
    <string name="wom_end_activity_operate">确认结束活动操作？</string>
    <string name="wom_please_select_ware">请先选择仓库</string>
    <string name="wom_di">第【</string>
    <string name="wom_please_write_material_batch">】项请填写物料批号</string>
    <string name="wom_please_write_ware">】项请填写仓库</string>
    <string name="wom_please_write_material_num">】项请填写用料量</string>
    <string name="wom_material_exist">】物料已存在，请重新扫描</string>
    <string name="wom_material_error">】物料批号，请重新扫描</string>
    <string name="wom_no_current_material">非当前【</string>
    <string name="wom_check_item_list">检查活动项目</string>
    <string name="wom_please_write_value">】项请填写入报出值</string>
    <string name="wom_please_write_output">】项请填写产出量</string>
    <string name="wom_please_write_into_ware_batch">】项请填写入库批号</string>
    <string name="wom_select_ware">】项请选择仓库</string>
    <string name="wom_pleasr_write_num">】项请填写数量</string>
    <string name="wom_please_write_material">】项请填写物料</string>
    <string name="wom_select_store">货位选择</string>
    <string name="wom_input_store_set">请输入货位名称</string>
    <string name="wom_ware_select">仓库选择</string>
    <string name="wom_input_ware_name">请输入仓库名称</string>
    <string name="wom_no_processing">无执行工序</string>
    <string name="wom_confirm_tip">确认</string>
    <string name="wom_process_operate">该工序操作？</string>
    <string name="wom_task_operate">该工单操作？</string>
    <string name="wom_start_predischarge">是否开启提前放料操作？</string>
    <string name="wom_setting_factory">请先设置工作单元</string>
    <string name="wom_no_process_view">当前工单状态下，无工序查看</string>
    <string name="wom_forbidden_pass_if_adjust">调整阶段，不允许提前放行</string>
    <string name="wom_advance_release_sure">确认提前放行操作？</string>
    <string name="wom_quality">检验</string>
    <string name="wom_exist_running_activity">存在执行中活动，请确保结束！</string>
    <string name="wom_pending">生产待办</string>
    <string name="wom_task">指令单</string>
    <string name="wom_activity">活动</string>
    <string name="wom_remain_material_refence">尾料参照</string>
    <string name="wom_remain_num">尾料量</string>
    <string name="wom_remain_num_compare">尾料量须小于扫描规格量:</string>
    <string name="wom_remain_num_compare_sum">尾料量与用料量之和须小于扫描规格量:</string>
    <string name="wom_material_report_detail">用料明细</string>
    <string name="wom_remain_material_select">尾料选择</string>
    <string name="wom_putin_num_compare_remain">尾料参照数据，用料量不能大于尾料可用量:</string>
    <string name="wom_putin_num_compare_remain_sum">尾料参照数据，用料量与尾料量之和不能大于尾料可用量:</string>
    <string name="wom_remain_compare_less">尾料参照数据，尾料量须小于尾料可用量:</string>
    <string name="wom_remain_compare_less_sum">尾料参照数据，尾料量与用料量之和须小于尾料可用量:</string>
    <string name="wom_putin_num_compare_scan">用料量不能大于扫描规格量:</string>
    <string name="wom_putin_num_compare_sum">用料量与尾料量之和须小于扫描规格量:</string>
    <string name="wom_putin_batch_num_compare">尾料量须小于可用量:</string>
    <string name="wom_no_realize">暂未实现</string>
    <string name="wom_scan_no_produce_no">未扫描到当前生产批次</string>
    <string name="wom_task_paused">工单已暂停，请先恢复</string>
    <string name="wom_output_greater_than_zero">】项产出量须大于0</string>
    <string name="wom_num_greater_than_zero">】项数量须大于0</string>
    <string name="wom_warehouse_enable_please_write_storage">】项仓库已启用货位，请填写货位</string>
    <string name="wom_from_remain_putin_num_greater_zero">】项来源尾料，用料量须大于零</string>
    <string name="wom_activity_process">活动执行流程</string>
    <string name="wom_check_result">检验结果</string>
    <string name="wom_query_workshop_warehouse">车间仓查询中...</string>
    <string name="wom_active_type">活动类型</string>
    <string name="wom_work_unit_set">工作单元设置</string>
    <string name="wom_check_submit_tip">确认点击完成操作？ \n注：检查项全部通过点击完成则自动结束当前活动，否则会重新生成新的检查报工单</string>
    <string name="wom_total_num_greater_plan_num">当前扫描量与列表投料量总和已经超出计划投料量！是否继续？</string>
    <string name="wom_red_scan">设备红外扫码</string>
    <string name="wom_vessel_code">容器编码</string>
    <string name="produce_please_scan_material">请扫描物料</string>
    <string name="wom_end_task_and_report">确认结束当前工单且报工！</string>
    <string name="wom_please_scan_pack_machine">请先扫描包装机确认！</string>
    <string name="wom_please_scan_pack_machine_qr">请扫描机台码！</string>
    <string name="wom_no_match_pack_machine">未能匹配包装机台！</string>
    <string name="wom_pack_machine">机台</string>
    <string name="wom_saved_report_detail">已保存报工明细</string>
</resources>
