<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/BgXjAreaBlue"
    android:orientation="vertical"
    android:elevation="@dimen/dp_1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <com.supcon.mes.mbap.view.CustomTextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_weight="1"
                android:id="@+id/processNameCustomTv"
                android:tag="processNameCustomTv"
                app:key="@string/wom_process_name"
                app:key_color="@color/titleTextColor"
                app:key_size="13"
                app:key_width="@dimen/dp_60"
                app:content_size="15"
                app:content_color="@color/dark_text"
                app:max_lines="1"/>
            <TextView
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:id="@+id/exeSequenceTv"
                android:tag="exeSequenceTv"
                android:text="@string/wom_process_sequence"
                android:textColor="@color/dark_text"
                android:drawableStart="@drawable/wom_ic_num"
                android:drawablePadding="@dimen/dp_5"/>
        </LinearLayout>
        <com.supcon.mes.mbap.view.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:id="@+id/equipmentCustomTv"
            android:tag="equipmentCustomTv"
            app:key="@string/wom_equipment_name"
            app:key_color="@color/titleTextColor"
            app:key_size="13"
            app:key_width="@dimen/dp_60"
            app:content_size="15"
            app:content_color="@color/dark_text"
            app:max_lines="1"/>
        <com.supcon.mes.mbap.view.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:id="@+id/timeCustomTv"
            android:tag="timeCustomTv"
            app:key="@string/wom_time"
            app:key_color="@color/titleTextColor"
            app:key_size="13"
            app:key_width="@dimen/dp_60"
            app:content_size="15"
            app:content_color="@color/dark_text"
            app:max_lines="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tvOperateLl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_25"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="end"
        android:tag="tvOperateLl">
        <TextView
            android:id="@+id/setEquipmentTv"
            style="@style/operateBtnStyle"
            android:layout_width="@dimen/dp_100"
            android:background="@drawable/wom_sh_resume_bg"
            android:tag="setEquipmentTv"
            android:text="@string/wom_work_unit_set" />
        <TextView
            android:id="@+id/processStartTv"
            style="@style/operateBtnStyle"
            android:background="@drawable/wom_sh_start_bg"
            android:tag="processStartTv"
            android:text="@string/wom_start" />
    </LinearLayout>
</LinearLayout>