<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wom_sh_white_bg"
    android:padding="@dimen/dp_10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:text="@string/wom_title_tip"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        android:id="@+id/tipContentTv"
        android:tag="tipContentTv"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_warning"
        android:drawablePadding="@dimen/dp_10"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="@dimen/fontSize_14sp"/>
    <include layout="@layout/ly_line_light"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:layout_weight="1"
            android:background="@drawable/sl_press_no_stroke"
            android:id="@+id/cancelTv"
            android:tag="cancelTv"
            android:text="@string/wom_cancel"
            android:textColor="@color/black"
            android:gravity="center"/>
        <include layout="@layout/ly_vertical_line"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:layout_weight="1"
            android:background="@drawable/sl_press_no_stroke"
            android:id="@+id/confirmTv"
            android:tag="confirmTv"
            android:text="@string/wom_end"
            android:textColor="@color/red"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>