<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/dp_10"
    android:elevation="@dimen/dp_2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/dp_5"
        android:paddingTop="@dimen/dp_10"
        android:id="@+id/index"
        android:tag="index"
        android:textColor="@color/titleTextColor"
        android:textSize="@dimen/fontSize_15sp"
        android:gravity="center_horizontal"
        tools:text="@string/wom_sequence"/>

    <!--layout_height设置为 match_parent-->
    <RelativeLayout
        android:id="@+id/itemAreaDotLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:tag="itemAreaDotLayout"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:id="@+id/itemAreaLineTop"
            android:layout_width="1dp"
            android:layout_height="@dimen/dp_13"
            android:layout_centerHorizontal="true"
            android:background="@color/wom_blue_5DB7FF"
            android:tag="itemAreaLineTop"/>
        <ImageView
            android:id="@+id/itemAreaDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemAreaLineTop"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            android:src="@drawable/wom_ic_node_blue"
            android:tag="itemAreaDot" />
        <View
            android:id="@+id/itemAreaLineBottom"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/itemAreaDot"
            android:layout_centerInParent="true"
            android:background="@color/wom_blue_5DB7FF"
            android:tag="itemAreaLineBottom" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/dp_10"
                android:id="@+id/material"
                android:tag="material"
                android:textColor="@color/wom_black_333333"
                android:textSize="@dimen/fontSize_15sp"
                tools:text="@string/wom_material"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/statusTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="statusTv"
                android:text="@string/wom_executing"
                android:textColor="@color/textColorlightblack"
                android:textSize="@dimen/fontSize_12sp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:id="@+id/intoIv"
                android:tag="intoIv"
                android:src="@drawable/ic_into"
                android:visibility="visible"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/num"
            android:paddingTop="@dimen/dp_5"
            android:tag="num"
            android:text="@string/wom_num"
            android:textColor="@color/textColorlightblack"
            android:textSize="@dimen/fontSize_12sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dealTime"
            android:paddingTop="@dimen/dp_5"
            android:tag="dealTime"
            tools:text="@string/wom_time"
            android:textColor="@color/textColorlightblack"
            android:textSize="@dimen/fontSize_12sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:id="@+id/autoBatchIv"
        android:tag="autoBatchIv"
        android:src="@drawable/ic_automatic"
        android:visibility="visible"/>
</LinearLayout>