<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:elevation="@dimen/dp_2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginEnd="@dimen/dp_10"
            android:textStyle="bold"
            android:textColor="@color/dark_text"
            android:id="@+id/materialNameTv"
            android:tag="materialNameTv"/>
        <TextView
            android:id="@+id/activityTypeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="@dimen/dp_120"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingTop="3dp"
            android:paddingEnd="12dp"
            android:paddingBottom="3dp"
            android:tag="activityTypeTv"
            android:textStyle="bold"
            android:textColor="@color/dark_text"
            android:text="@string/wom_manual_put_in" />
    </LinearLayout>
    <include layout="@layout/ly_line_light"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_10">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/numLl"
                android:tag="numLl"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/wom_num"
                    android:textColor="@color/titleTextColor"
                    android:drawableStart="@drawable/ic_amount"
                    android:drawablePadding="@dimen/dp_5"/>
                <com.supcon.mes.mbap.view.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_36"
                    android:id="@+id/numCustomTv"
                    android:tag="numCustomTv"
                    app:key_width="0dp"
                    app:content_size="15"
                    app:content_color="@color/dark_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/wom_time"
                    android:textColor="@color/titleTextColor"
                    android:drawableStart="@drawable/ic_time"
                    android:drawablePadding="@dimen/dp_5"/>
                <com.supcon.mes.mbap.view.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_36"
                    android:id="@+id/timeCustomTv"
                    android:tag="timeCustomTv"
                    app:key_width="0dp"
                    app:content_size="15"
                    app:content_color="@color/dark_text"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/putInStartTv"
            style="@style/operateBtnStyle"
            android:background="@drawable/wom_sh_start_bg"
            android:layout_height="@dimen/dp_25"
            android:tag="putInStartTv"
            android:text="@string/wom_start" />
    </LinearLayout>
</LinearLayout>